Reformatted code Added Collection types (List, Set, Queue) as return types from getX() methods.